--- a/style.css
+++ b/style.css
@@ -25,9 +25,23 @@ main{
     margin: 0px 20px 0 20px;
 }
 
+.list {
+    width: 600px;
+    height: 500px;
+    margin: auto;
+    letter-spacing: 1.5mm;
+    line-height: 1cm;
+    font-size: larger;
+    padding-top: 50px;
+}
+
+.list div{
+  text-align: center;
+}
+
 li:first-child{
     list-style-type: none;
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: bold;
     text-decoration:underline;
 }
@@ -44,27 +58,26 @@ li:first-child{
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: bolder;
   line-height: 20px;
   margin: 0 5px 10px 0;
   overflow: visible;
   padding: 12px 40px;
   text-align: center;
-  text-transform: none;
-  touch-action: manipulation;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-
-.button:focus {
-  text-decoration: none;
+  /* text-transform: none; */
+  /* touch-action: manipulation; */
+  /* user-select: none; */
+  /* -webkit-user-select: none; */
+  /* vertical-align: middle; */
+  /* white-space: nowrap; */
 }
 
 .button:hover {
   text-decoration: none;
+  background-color: #fff;
+  color: #000;
+  box-shadow: #000 4px 4px 0 0,#000 4px 4px 0 1px;
 }
 
 .button:active {
@@ -73,7 +86,7 @@ li:first-child{
 }
 
 .button:not([disabled]):active {
-  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  box-shadow: #000 2px 2px 0 0, #000 2px 2px 0 1px;
   transform: translate(2px, 2px);
 }
 
